fix inconsistencies from merging epochprobechannel

--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -78,9 +78,10 @@
    "source": [
     "fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n",
     "                   metadata_file_pattern='.*\\\\.txt')\n",
+    "class MockEpochProbeMap: pass\n",
     "daqs = [\n",
-    "    DaqSystem('ds0', fn, MockReader),\n",
-    "    DaqSystem('ds1', fn, MockReader)\n",
+    "    DaqSystem('ds0', fn, MockReader, MockEpochProbeMap),\n",
+    "    DaqSystem('ds1', fn, MockReader, MockEpochProbeMap)\n",
     "]\n",
     "for ds in daqs:\n",
     "    exp.add_daq_system(ds)"
@@ -117,9 +118,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.probe.Probe at 0x11a9f7c10>,\n",
-       " <ndi.probe.Probe at 0x11a9f7130>,\n",
-       " <ndi.probe.Probe at 0x11a9f75e0>]"
+       "[<ndi.probe.Probe at 0x116264b20>,\n",
+       " <ndi.probe.Probe at 0x1234a5580>,\n",
+       " <ndi.probe.Probe at 0x1234a5100>]"
       ]
      },
      "execution_count": 9,
@@ -161,9 +162,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11aa0b610>,\n",
-       " <ndi.document.Document at 0x11aa0b250>,\n",
-       " <ndi.document.Document at 0x11a9f7b20>]"
+       "[<ndi.document.Document at 0x1234d8b50>,\n",
+       " <ndi.document.Document at 0x1234d8ac0>,\n",
+       " <ndi.document.Document at 0x1234d8b80>]"
       ]
      },
      "execution_count": 11,
@@ -183,12 +184,12 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.channel.Channel at 0x10e44b430>,\n",
-       " <ndi.channel.Channel at 0x11a9f7bb0>,\n",
-       " <ndi.channel.Channel at 0x11a9f7b50>,\n",
-       " <ndi.channel.Channel at 0x11aa40340>,\n",
-       " <ndi.channel.Channel at 0x11aa40520>,\n",
-       " <ndi.channel.Channel at 0x11aa401c0>]"
+       "[<ndi.channel.Channel at 0x12341df10>,\n",
+       " <ndi.channel.Channel at 0x10a13d520>,\n",
+       " <ndi.channel.Channel at 0x12344b100>,\n",
+       " <ndi.channel.Channel at 0x12344b0a0>,\n",
+       " <ndi.channel.Channel at 0x1234a5c70>,\n",
+       " <ndi.channel.Channel at 0x1234a5b80>]"
       ]
      },
      "execution_count": 12,
@@ -222,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.epoch.Epoch at 0x11aa48d60>, <ndi.epoch.Epoch at 0x11aa48970>]"
+       "[<ndi.epoch.Epoch at 0x1234d8370>, <ndi.epoch.Epoch at 0x1234d8e50>]"
       ]
      },
      "execution_count": 14,
@@ -238,7 +239,24 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Epoch' object has no attribute 'link_channel'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/ndi_object.py\u001b[0m in \u001b[0;36m__getattribute__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 86\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'document'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     87\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mKeyError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'link_channel'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-7c67f1b03723>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mchannel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchannels0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mepochs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlink_channel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchannel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mepochs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlink_channel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchannel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/ndi_object.py\u001b[0m in \u001b[0;36m__getattribute__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m     86\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'document'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mKeyError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Epoch' object has no attribute 'link_channel'"
+     ]
+    }
+   ],
    "source": [
     "for channel in channels0:\n",
     "    epochs[0].link_channel(channel)\n",
@@ -247,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,53 +275,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.document.Document at 0x11a9f7dc0>,\n",
-       " <ndi.document.Document at 0x11a9f79a0>,\n",
-       " <ndi.document.Document at 0x11aa59520>,\n",
-       " <ndi.document.Document at 0x11aa599a0>,\n",
-       " <ndi.document.Document at 0x11aa595e0>,\n",
-       " <ndi.document.Document at 0x11aa596d0>]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "epochs[0].get_channels()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.document.Document at 0x11aa6e3d0>,\n",
-       " <ndi.document.Document at 0x11aa6e5e0>]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "channels0[0].get_epochs()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,66 +303,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'name': 'doc',\n",
-       "  'type': 'independent',\n",
-       "  'experiment_id': '245374cbc51b4a898a3f6f46eb6fc794',\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': '',\n",
-       "  'version_depth': 0,\n",
-       "  'latest_version': True},\n",
-       " '_dependencies': {},\n",
-       " '_depends_on': ['245374cbc51b4a898a3f6f46eb6fc794'],\n",
-       " 'hello': 'world'}"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "exp.ctx.find_by_id(doc.id).data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'doc': <ndi.document.Document at 0x11aa488e0>}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "exp.current.document.get_dependencies()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f16cd21999134619b1cef16e209abb2f\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(doc.id)\n",
     "doc.delete_self(force=True)"
@@ -380,20 +331,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# accessing exp with current ensures that the experiment is up to date with the database\n",
     "# is equivalent to ndi_object.refresh()\n",
@@ -402,20 +342,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'This object has been deleted.'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "doc.data"
    ]
@@ -429,29 +358,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'_metadata': {'name': 'list-doc',\n",
-       "   'type': '',\n",
-       "   'experiment_id': '',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  '_depends_on': [],\n",
-       "  'list': ['abc', 'def', 'ghi']}]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "doc = Document({\"list\": [\"abc\", \"def\", \"ghi\"]}, 'list-doc')\n",
     "db.add(doc)\n",
@@ -467,30 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'name': 'test_experiment',\n",
-       "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '245374cbc51b4a898a3f6f46eb6fc794',\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': '',\n",
-       "  'version_depth': 0,\n",
-       "  'latest_version': True},\n",
-       " '_dependencies': {},\n",
-       " '_depends_on': [],\n",
-       " 'daq_system_ids': ['6f5ca96e7fe64116b3743d89ade4e5f9',\n",
-       "  '5595e02d1404414d9f524e87666cf738']}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Experiment('test_experiment').connect(\n",
     "    database=db,\n",
@@ -501,29 +389,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
-       "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'f2c4cc1ad78e4e369b445f9a4ef35666',\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': '',\n",
-       "  'version_depth': 0,\n",
-       "  'latest_version': True},\n",
-       " '_dependencies': {},\n",
-       " '_depends_on': [],\n",
-       " 'daq_system_ids': []}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Experiment('test_dfjslfjdkf').connect(\n",
     "    database=db,\n",
