move all ndi_classes to ndi.core.py

--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -118,9 +118,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.probe.Probe at 0x116264b20>,\n",
-       " <ndi.probe.Probe at 0x1234a5580>,\n",
-       " <ndi.probe.Probe at 0x1234a5100>]"
+       "[<ndi.core.Probe at 0x12b2fa8b0>,\n",
+       " <ndi.core.Probe at 0x12b2faa90>,\n",
+       " <ndi.core.Probe at 0x12b3742b0>]"
       ]
      },
      "execution_count": 9,
@@ -162,9 +162,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x1234d8b50>,\n",
-       " <ndi.document.Document at 0x1234d8ac0>,\n",
-       " <ndi.document.Document at 0x1234d8b80>]"
+       "[<ndi.document.Document at 0x12b35dc70>,\n",
+       " <ndi.document.Document at 0x12b2fa160>,\n",
+       " <ndi.document.Document at 0x12b2fa790>]"
       ]
      },
      "execution_count": 11,
@@ -184,12 +184,12 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.channel.Channel at 0x12341df10>,\n",
-       " <ndi.channel.Channel at 0x10a13d520>,\n",
-       " <ndi.channel.Channel at 0x12344b100>,\n",
-       " <ndi.channel.Channel at 0x12344b0a0>,\n",
-       " <ndi.channel.Channel at 0x1234a5c70>,\n",
-       " <ndi.channel.Channel at 0x1234a5b80>]"
+       "[<ndi.core.Channel at 0x111fbd670>,\n",
+       " <ndi.core.Channel at 0x12b374c40>,\n",
+       " <ndi.core.Channel at 0x12b3748e0>,\n",
+       " <ndi.core.Channel at 0x12b374130>,\n",
+       " <ndi.core.Channel at 0x12b3745e0>,\n",
+       " <ndi.core.Channel at 0x12b374310>]"
       ]
      },
      "execution_count": 12,
@@ -223,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.epoch.Epoch at 0x1234d8370>, <ndi.epoch.Epoch at 0x1234d8e50>]"
+       "[<ndi.core.Epoch at 0x12b380520>, <ndi.core.Epoch at 0x111ff9a90>]"
       ]
      },
      "execution_count": 14,
@@ -233,120 +233,6 @@
    ],
    "source": [
     "exp.get_epochs()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Epoch' object has no attribute 'link_channel'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/ndi_object.py\u001b[0m in \u001b[0;36m__getattribute__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 86\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'document'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     87\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mKeyError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'link_channel'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-7c67f1b03723>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mchannel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchannels0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mepochs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlink_channel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchannel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mepochs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlink_channel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchannel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/ndi_object.py\u001b[0m in \u001b[0;36m__getattribute__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m     86\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'document'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mKeyError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Epoch' object has no attribute 'link_channel'"
-     ]
-    }
-   ],
-   "source": [
-    "for channel in channels0:\n",
-    "    epochs[0].link_channel(channel)\n",
-    "    epochs[1].link_channel(channel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for channel in channels1:\n",
-    "    epochs[0].link_channel(channel.id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epochs[0].get_channels()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "channels0[0].get_epochs()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
-    "exp.add_document(doc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exp.ctx.find_by_id(doc.id).data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exp.current.document.get_dependencies()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(doc.id)\n",
-    "doc.delete_self(force=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# accessing exp with current ensures that the experiment is up to date with the database\n",
-    "# is equivalent to ndi_object.refresh()\n",
-    "exp.current.document.get_dependencies()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc.data"
    ]
   },
   {
@@ -361,6 +247,173 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
+    "exp.add_document(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'name': 'doc',\n",
+       "  'type': 'independent',\n",
+       "  'experiment_id': 'ac6e222dcf2644a09f7aa85e119f3443',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " '_depends_on': ['ac6e222dcf2644a09f7aa85e119f3443'],\n",
+       " 'hello': 'world'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.ctx.find_by_id(doc.id).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'doc': <ndi.document.Document at 0x12b374820>}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.current.document.get_dependencies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cea0d3fd24f84be5bd46b26cc04943c4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(doc.id)\n",
+    "doc.delete_self(force=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# accessing exp with current ensures that the experiment is up to date with the database\n",
+    "# is equivalent to ndi_object.refresh()\n",
+    "exp.current.document.get_dependencies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This object has been deleted.'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_metadata': {'name': 'list-doc',\n",
+       "   'type': '',\n",
+       "   'experiment_id': '',\n",
+       "   'parent_id': '',\n",
+       "   'asc_path': '',\n",
+       "   'version_depth': 0,\n",
+       "   'latest_version': True},\n",
+       "  '_dependencies': {},\n",
+       "  '_depends_on': [],\n",
+       "  'list': ['abc', 'def', 'ghi']}]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "doc = Document({\"list\": [\"abc\", \"def\", \"ghi\"]}, 'list-doc')\n",
     "db.add(doc)\n",
@@ -376,9 +429,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'name': 'test_experiment',\n",
+       "  'type': 'ndi_experiment',\n",
+       "  'experiment_id': 'ac6e222dcf2644a09f7aa85e119f3443',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " '_depends_on': [],\n",
+       " 'daq_system_ids': ['1a6950486f8b43f09131a1a1814904a0',\n",
+       "  '6f884f99daaa4cd0a46a5bb18b72a42d']}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Experiment('test_experiment').connect(\n",
     "    database=db,\n",
@@ -389,9 +463,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
+       "  'type': 'ndi_experiment',\n",
+       "  'experiment_id': 'a3206962deb84ac9b72e33f940a97289',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " '_depends_on': [],\n",
+       " 'daq_system_ids': []}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Experiment('test_dfjslfjdkf').connect(\n",
     "    database=db,\n",
