start daqsystem-epoch relationship

--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -118,9 +118,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x12b2fa8b0>,\n",
-       " <ndi.core.Probe at 0x12b2faa90>,\n",
-       " <ndi.core.Probe at 0x12b3742b0>]"
+       "[<ndi.core.Probe at 0x12078ff40>,\n",
+       " <ndi.core.Probe at 0x107410b80>,\n",
+       " <ndi.core.Probe at 0x107410490>]"
       ]
      },
      "execution_count": 9,
@@ -162,9 +162,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x12b35dc70>,\n",
-       " <ndi.document.Document at 0x12b2fa160>,\n",
-       " <ndi.document.Document at 0x12b2fa790>]"
+       "[<ndi.document.Document at 0x120717a60>,\n",
+       " <ndi.document.Document at 0x120717640>,\n",
+       " <ndi.document.Document at 0x120717af0>]"
       ]
      },
      "execution_count": 11,
@@ -184,12 +184,12 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x111fbd670>,\n",
-       " <ndi.core.Channel at 0x12b374c40>,\n",
-       " <ndi.core.Channel at 0x12b3748e0>,\n",
-       " <ndi.core.Channel at 0x12b374130>,\n",
-       " <ndi.core.Channel at 0x12b3745e0>,\n",
-       " <ndi.core.Channel at 0x12b374310>]"
+       "[<ndi.core.Channel at 0x12078ff10>,\n",
+       " <ndi.core.Channel at 0x12078f6d0>,\n",
+       " <ndi.core.Channel at 0x1206da9a0>,\n",
+       " <ndi.core.Channel at 0x12079f790>,\n",
+       " <ndi.core.Channel at 0x12079f670>,\n",
+       " <ndi.core.Channel at 0x12079ffd0>]"
       ]
      },
      "execution_count": 12,
@@ -208,8 +208,8 @@
    "outputs": [],
    "source": [
     "epochs = [\n",
-    "    Epoch(daq_system_id=daqs[0].id),\n",
-    "    Epoch(daq_system_id=daqs[0].id)\n",
+    "    Epoch(daq_system_ids=[daqs[0].id]),\n",
+    "    Epoch(daq_system_ids=[daqs[0].id])\n",
     "]\n",
     "for e in epochs:\n",
     "    exp.add_epoch(e)"
@@ -223,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x12b380520>, <ndi.core.Epoch at 0x111ff9a90>]"
+       "[<ndi.core.Epoch at 0x12078f6a0>, <ndi.core.Epoch at 0x12078fe50>]"
       ]
      },
      "execution_count": 14,
@@ -283,13 +283,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': 'ac6e222dcf2644a09f7aa85e119f3443',\n",
+       "  'experiment_id': 'fd28bb385108428ea717bb25455bef36',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['ac6e222dcf2644a09f7aa85e119f3443'],\n",
+       " '_depends_on': ['fd28bb385108428ea717bb25455bef36'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -310,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x12b374820>}"
+       "{'doc': <ndi.document.Document at 0x1207b66a0>}"
       ]
      },
      "execution_count": 17,
@@ -319,7 +319,7 @@
     }
    ],
    "source": [
-    "exp.current.document.get_dependencies()"
+    "exp.current.get_document_dependencies()"
    ]
   },
   {
@@ -331,7 +331,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cea0d3fd24f84be5bd46b26cc04943c4\n"
+      "da9ecb1e11314708be331de7d8b7d1d9\n"
      ]
     }
    ],
@@ -359,7 +359,7 @@
    "source": [
     "# accessing exp with current ensures that the experiment is up to date with the database\n",
     "# is equivalent to ndi_object.refresh()\n",
-    "exp.current.document.get_dependencies()"
+    "exp.current.get_document_dependencies()"
    ]
   },
   {
@@ -437,15 +437,15 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'ac6e222dcf2644a09f7aa85e119f3443',\n",
+       "  'experiment_id': 'fd28bb385108428ea717bb25455bef36',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
        " '_depends_on': [],\n",
-       " 'daq_system_ids': ['1a6950486f8b43f09131a1a1814904a0',\n",
-       "  '6f884f99daaa4cd0a46a5bb18b72a42d']}"
+       " 'daq_system_ids': ['d8b3da46383541829f0fad5d9cf3530c',\n",
+       "  '21077a93313b4190b6566a552e31ada2']}"
       ]
      },
      "execution_count": 22,
@@ -471,7 +471,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'a3206962deb84ac9b72e33f940a97289',\n",
+       "  'experiment_id': '870b54636f144abc89ab27799b88ec39',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
