--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -118,9 +118,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x12078ff40>,\n",
-       " <ndi.core.Probe at 0x107410b80>,\n",
-       " <ndi.core.Probe at 0x107410490>]"
+       "[<ndi.core.Probe at 0x122a33ac0>,\n",
+       " <ndi.core.Probe at 0x122a33280>,\n",
+       " <ndi.core.Probe at 0x122a33fa0>]"
       ]
      },
      "execution_count": 9,
@@ -162,9 +162,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x120717a60>,\n",
-       " <ndi.document.Document at 0x120717640>,\n",
-       " <ndi.document.Document at 0x120717af0>]"
+       "[<ndi.document.Document at 0x1096b4880>,\n",
+       " <ndi.document.Document at 0x1229b4700>,\n",
+       " <ndi.document.Document at 0x1229b4760>]"
       ]
      },
      "execution_count": 11,
@@ -184,12 +184,12 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x12078ff10>,\n",
-       " <ndi.core.Channel at 0x12078f6d0>,\n",
-       " <ndi.core.Channel at 0x1206da9a0>,\n",
-       " <ndi.core.Channel at 0x12079f790>,\n",
-       " <ndi.core.Channel at 0x12079f670>,\n",
-       " <ndi.core.Channel at 0x12079ffd0>]"
+       "[<ndi.core.Channel at 0x122a391f0>,\n",
+       " <ndi.core.Channel at 0x122a393d0>,\n",
+       " <ndi.core.Channel at 0x122a39070>,\n",
+       " <ndi.core.Channel at 0x122a39ca0>,\n",
+       " <ndi.core.Channel at 0x122a49a00>,\n",
+       " <ndi.core.Channel at 0x122a49ac0>]"
       ]
      },
      "execution_count": 12,
@@ -223,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x12078f6a0>, <ndi.core.Epoch at 0x12078fe50>]"
+       "[<ndi.core.Epoch at 0x122a53280>, <ndi.core.Epoch at 0x122a536a0>]"
       ]
      },
      "execution_count": 14,
@@ -283,13 +283,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': 'fd28bb385108428ea717bb25455bef36',\n",
+       "  'experiment_id': '6e6383f8ccf443a689cab7c74d7b8da4',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['fd28bb385108428ea717bb25455bef36'],\n",
+       " '_depends_on': ['6e6383f8ccf443a689cab7c74d7b8da4'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -310,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x1207b66a0>}"
+       "{'doc': <ndi.document.Document at 0x122a573d0>}"
       ]
      },
      "execution_count": 17,
@@ -331,7 +331,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "da9ecb1e11314708be331de7d8b7d1d9\n"
+      "b53d4039be7d4fe9b2bf5db522de998c\n"
      ]
     }
    ],
@@ -437,15 +437,15 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'fd28bb385108428ea717bb25455bef36',\n",
+       "  'experiment_id': '6e6383f8ccf443a689cab7c74d7b8da4',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
        " '_depends_on': [],\n",
-       " 'daq_system_ids': ['d8b3da46383541829f0fad5d9cf3530c',\n",
-       "  '21077a93313b4190b6566a552e31ada2']}"
+       " 'daq_system_ids': ['107570c6730c41b48fa215adb1aef3f0',\n",
+       "  '3f34ff98f9444de5bce67468550b8ba3']}"
       ]
      },
      "execution_count": 22,
@@ -471,7 +471,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '870b54636f144abc89ab27799b88ec39',\n",
+       "  'experiment_id': 'e560408b611f477892bf9cd79079865a',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
