--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -74,7 +74,15 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['f83e3cffc3da4abcae4c88ae15c0bbec', '62e31806d6cc487b96e104d495fc8fd4', 'b05a5ec6cbdf45ad83db5493b6058cd9']\n"
+     ]
+    }
+   ],
    "source": [
     "fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n",
     "                   metadata_file_pattern='.*\\\\.txt')\n",
@@ -83,6 +91,7 @@
     "    DaqSystem('ds0', fn, MockReader, MockEpochProbeMap),\n",
     "    DaqSystem('ds1', fn, MockReader, MockEpochProbeMap)\n",
     "]\n",
+    "print([d.id for d in daqs+[fn]])\n",
     "for ds in daqs:\n",
     "    exp.add_daq_system(ds)"
    ]
@@ -118,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x122a33ac0>,\n",
-       " <ndi.core.Probe at 0x122a33280>,\n",
-       " <ndi.core.Probe at 0x122a33fa0>]"
+       "[<ndi.core.Probe at 0x10c006490>,\n",
+       " <ndi.core.Probe at 0x10c006310>,\n",
+       " <ndi.core.Probe at 0x12432d910>]"
       ]
      },
      "execution_count": 9,
@@ -162,9 +171,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x1096b4880>,\n",
-       " <ndi.document.Document at 0x1229b4700>,\n",
-       " <ndi.document.Document at 0x1229b4760>]"
+       "[<ndi.document.Document at 0x12431af40>,\n",
+       " <ndi.document.Document at 0x12431a130>,\n",
+       " <ndi.document.Document at 0x12431a070>]"
       ]
      },
      "execution_count": 11,
@@ -184,12 +193,12 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x122a391f0>,\n",
-       " <ndi.core.Channel at 0x122a393d0>,\n",
-       " <ndi.core.Channel at 0x122a39070>,\n",
-       " <ndi.core.Channel at 0x122a39ca0>,\n",
-       " <ndi.core.Channel at 0x122a49a00>,\n",
-       " <ndi.core.Channel at 0x122a49ac0>]"
+       "[<ndi.core.Channel at 0x12432d400>,\n",
+       " <ndi.core.Channel at 0x12432db20>,\n",
+       " <ndi.core.Channel at 0x124302190>,\n",
+       " <ndi.core.Channel at 0x1243027f0>,\n",
+       " <ndi.core.Channel at 0x124276370>,\n",
+       " <ndi.core.Channel at 0x1242765e0>]"
       ]
      },
      "execution_count": 12,
@@ -223,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x122a53280>, <ndi.core.Epoch at 0x122a536a0>]"
+       "[<ndi.core.Epoch at 0x124341970>, <ndi.core.Epoch at 0x1243412e0>]"
       ]
      },
      "execution_count": 14,
@@ -283,13 +292,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '6e6383f8ccf443a689cab7c74d7b8da4',\n",
+       "  'experiment_id': '03c53b22ae44418b8a946d0095adbadf',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['6e6383f8ccf443a689cab7c74d7b8da4'],\n",
+       " '_depends_on': ['03c53b22ae44418b8a946d0095adbadf'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -310,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x122a573d0>}"
+       "{'doc': <ndi.document.Document at 0x1243029a0>}"
       ]
      },
      "execution_count": 17,
@@ -331,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b53d4039be7d4fe9b2bf5db522de998c\n"
+      "a1f1fc5461834552a41a45f1d602c647\n"
      ]
     }
    ],
@@ -437,15 +446,15 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '6e6383f8ccf443a689cab7c74d7b8da4',\n",
+       "  'experiment_id': '03c53b22ae44418b8a946d0095adbadf',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
        " '_depends_on': [],\n",
-       " 'daq_system_ids': ['107570c6730c41b48fa215adb1aef3f0',\n",
-       "  '3f34ff98f9444de5bce67468550b8ba3']}"
+       " 'daq_system_ids': ['f83e3cffc3da4abcae4c88ae15c0bbec',\n",
+       "  '62e31806d6cc487b96e104d495fc8fd4']}"
       ]
      },
      "execution_count": 22,
@@ -471,7 +480,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'e560408b611f477892bf9cd79079865a',\n",
+       "  'experiment_id': 'a487e24305284429ac87d6ccfdac05aa',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
