add live daqsystems to experiment; handle live readers on channel

--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['f83e3cffc3da4abcae4c88ae15c0bbec', '62e31806d6cc487b96e104d495fc8fd4', 'b05a5ec6cbdf45ad83db5493b6058cd9']\n"
+      "['99b18ab82e9d47d1a80868a538c7a9f5', '925de0c74a5d49eb8cd01a36c8203e20', '224f97e8be87454390f31b0e4c956193']\n"
      ]
     }
    ],
@@ -127,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x10c006490>,\n",
-       " <ndi.core.Probe at 0x10c006310>,\n",
-       " <ndi.core.Probe at 0x12432d910>]"
+       "[<ndi.core.Probe at 0x129077640>,\n",
+       " <ndi.core.Probe at 0x129077280>,\n",
+       " <ndi.core.Probe at 0x129077250>]"
       ]
      },
      "execution_count": 9,
@@ -171,9 +171,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x12431af40>,\n",
-       " <ndi.document.Document at 0x12431a130>,\n",
-       " <ndi.document.Document at 0x12431a070>]"
+       "[<ndi.document.Document at 0x128fbc5e0>,\n",
+       " <ndi.document.Document at 0x115e1e370>,\n",
+       " <ndi.document.Document at 0x128feea30>]"
       ]
      },
      "execution_count": 11,
@@ -191,14 +191,26 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DAQ reader None not set to <ndi.core.Channel object at 0x128fbc7c0>. If necessary, connect this experiment to the appropriate DAQ system.\n",
+      "DAQ reader None not set to <ndi.core.Channel object at 0x12904b310>. If necessary, connect this experiment to the appropriate DAQ system.\n",
+      "DAQ reader None not set to <ndi.core.Channel object at 0x12904bd60>. If necessary, connect this experiment to the appropriate DAQ system.\n",
+      "DAQ reader None not set to <ndi.core.Channel object at 0x129064f10>. If necessary, connect this experiment to the appropriate DAQ system.\n",
+      "DAQ reader None not set to <ndi.core.Channel object at 0x129064c40>. If necessary, connect this experiment to the appropriate DAQ system.\n",
+      "DAQ reader None not set to <ndi.core.Channel object at 0x1290646a0>. If necessary, connect this experiment to the appropriate DAQ system.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x12432d400>,\n",
-       " <ndi.core.Channel at 0x12432db20>,\n",
-       " <ndi.core.Channel at 0x124302190>,\n",
-       " <ndi.core.Channel at 0x1243027f0>,\n",
-       " <ndi.core.Channel at 0x124276370>,\n",
-       " <ndi.core.Channel at 0x1242765e0>]"
+       "[<ndi.core.Channel at 0x128fbc7c0>,\n",
+       " <ndi.core.Channel at 0x12904b310>,\n",
+       " <ndi.core.Channel at 0x12904bd60>,\n",
+       " <ndi.core.Channel at 0x129064f10>,\n",
+       " <ndi.core.Channel at 0x129064c40>,\n",
+       " <ndi.core.Channel at 0x1290646a0>]"
       ]
      },
      "execution_count": 12,
@@ -232,7 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x124341970>, <ndi.core.Epoch at 0x1243412e0>]"
+       "[<ndi.core.Epoch at 0x12908e370>, <ndi.core.Epoch at 0x12908eb50>]"
       ]
      },
      "execution_count": 14,
@@ -292,13 +304,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '03c53b22ae44418b8a946d0095adbadf',\n",
+       "  'experiment_id': '3a719445f60a407e9631d951564d7ffc',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['03c53b22ae44418b8a946d0095adbadf'],\n",
+       " '_depends_on': ['3a719445f60a407e9631d951564d7ffc'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -319,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x1243029a0>}"
+       "{'doc': <ndi.document.Document at 0x129085c10>}"
       ]
      },
      "execution_count": 17,
@@ -340,7 +352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a1f1fc5461834552a41a45f1d602c647\n"
+      "38349832ac9f4fc486230fa68f7a0c3d\n"
      ]
     }
    ],
@@ -446,15 +458,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '03c53b22ae44418b8a946d0095adbadf',\n",
+       "  'experiment_id': '3a719445f60a407e9631d951564d7ffc',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': [],\n",
-       " 'daq_system_ids': ['f83e3cffc3da4abcae4c88ae15c0bbec',\n",
-       "  '62e31806d6cc487b96e104d495fc8fd4']}"
+       " '_depends_on': []}"
       ]
      },
      "execution_count": 22,
@@ -480,14 +490,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'a487e24305284429ac87d6ccfdac05aa',\n",
+       "  'experiment_id': '2d064b1caeae4e08b60cb4bce819d5e2',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': [],\n",
-       " 'daq_system_ids': []}"
+       " '_depends_on': []}"
       ]
      },
      "execution_count": 23,
